# hioki_sowft

./: .gitignore  10设备需求-温度记录仪-20250412.doc  BATTERY_ANALYZER_VARIANTS.md  check_config.py  clean_config.py  clear_old_configs.py  debug_config.py  pyproject.toml  requirements.txt  run_dark.bat  run_gray.bat  run_tests.py  run_white.bat  test_battery_analyzer.py  test_channel_order.py  test_data_order.py  test_pdf.py  test_step_by_step.py  开发日志.txt  电池分析软件.spec
.windsurf/rules/: cat1.md
LR8450/: API_地图与能力清单.md  LR8450_SDK_总结.md  UI组件规划.md  UI设计草案.md  开发目标.txt  开发计划.md  开发计划_v2.md
app/: __init__.py  config.py  main.py
app/core/: data_acquisition.py  device_identifier.py  device_manager.py  file_parser.py  settings_manager.py  simple_device_client.py  singleton_manager.py
app/ui/: __init__.py  main_window.py  style.py
battery_analyzer/: README.md  main.py  功能优化完成说明.md  快速开始.md  性能优化说明.md
battery_analyzer/core/: analysis_engine.py  device_worker.py  lr8450_client.py
battery_analyzer/ui/: color_dialog.py  main_window.py
battery_analyzer_gray/: README.md  __init__.py  main.py
battery_analyzer_gray/ui/: __init__.py  main_window.py  style.py
battery_analyzer_white/: README.md  __init__.py  main.py
battery_analyzer_white/ui/: __init__.py  main_window.py  style.py
python_code/: test_LR8450.py
tests/: .gitignore  README.md  test_module_detection.py  test_unit_detection_commands.py
tests/communication/: scan_all_channels.py  scan_unit2_full.py  simple_test.py  test_config_read_write.py  test_device_connections.py  test_lr8450_basic_scpi.py  (+9 more)
(+269 files in other folders)
