[project]
name = "lr8450-client"
version = "0.1.0"
description = "LR8450 data acquisition desktop client"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "pyqtgraph",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



